#4375 - turns out this was just a CSS issue. Added a background-image property to the placeholder so it becomes visible.

--- a/packages/scandipwa/src/route/CategoryPage/CategoryPage.style.scss
+++ b/packages/scandipwa/src/route/CategoryPage/CategoryPage.style.scss
@@ -93,6 +93,7 @@
                 flex-direction: column;
                 height: auto;
                 overflow: visible;
+                background-image: var(--placeholder-image);
             }
         }
     }
